recursion.logo.tree.Tree.scala.error
Compilation error:
Tree:9: error: not found: value noeud1
    noeud1(steps,length,angle,shrink)
    ^