recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  if (steps==0){}

  else{
    current(steps)
    baisseCrayon()
    avance(length)
    droite(angle)
    noeud1(steps,length,angle,shrink)
   
   
   


  }
}

